fix compilation errors